Fixed Alignment issues on Default Form

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,9 +29,9 @@ h6 {
 /*
 	login window
 */
-#login {
+/* #login {
   width: 380px;
-}
+} */
 #login .btn {
   float: left;
   width: 48%;
@@ -107,9 +107,9 @@ h6 {
 /*
 	modal windows
 */
-.modal .modal-dialog {
+/* .modal .modal-dialog {
   width: 480px;
-}
+} */
 .modal .form-group {
   margin-bottom: 0px;
 }
@@ -130,6 +130,8 @@ h6 {
   width: 80px;
 }
 .center-vertical {
+  max-width: 400px;
+  width: 90%;
   top: 50%;
   left: 50%;
   position: absolute;
